main.tf
###############################################################
# VPC with 1 public & 1 private subnet
###############################################################
data "aws_availability_zones" "available" {
  state = "available"
}

resource "aws_vpc" "main_vpc" {
  cidr_block       = var.VPC_block
  instance_tenancy = "default"

  tags = {
    Name = var.VPC_name
  }
}

resource "aws_subnet" "public_subnet" {
  vpc_id     = aws_vpc.main_vpc.id
  cidr_block = var.public_subnet_block
  availability_zone = data.aws_availability_zones.available.names[0]

  tags = {
    Name = "${var.VPC_name}-public-subnet"
  }
}

resource "aws_subnet" "private_subnet" {
  vpc_id     = aws_vpc.main_vpc.id
  cidr_block = var.private_subnet_block
  availability_zone = data.aws_availability_zones.available.names[0]

  tags = {
    Name = "${var.VPC_name}-private-subnet"
  }
}

# internet gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main_vpc.id
}

# public route table
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.main_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name    = "public subnets"
    Network = "public"
  }
}

# Public Subnet RouteTable Association
resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_route_table.id
}

# private route table
resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.main_vpc.id

  tags = {
    Name    = "private subnets"
    Network = "private"
  }
}

# PrivateSubnet01RouteTableAssociation
resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.private_route_table.id
}

###############################################################
# EC2 instances
###############################################################
resource "aws_security_group" "public" {
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "demo-public-security-group"
  }
}

resource "aws_security_group" "private" {
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    security_groups = [ aws_security_group.public.id ]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    security_groups = [aws_security_group.public.id]
  }

  tags = {
    Name = "demo-private-security-group"
  }
}

resource "aws_instance" "web-server" {
  ami           = "ami-0aa7d40eeae50c9a9"
  instance_type = "t2.micro"
  subnet_id = aws_subnet.public_subnet.id
  vpc_security_group_ids = [aws_security_group.public.id]
  key_name      = aws_key_pair.generated_key.key_name
  associate_public_ip_address = "true"

  tags = {
    Name = "Web Server"
  }
}

resource "aws_instance" "database" {
  ami           = "ami-0aa7d40eeae50c9a9"
  instance_type = "t2.micro"
  subnet_id = aws_subnet.private_subnet.id
  vpc_security_group_ids = [aws_security_group.private.id]
  tags = {
    Name = "Database"
  }
}


######################################################################
# generate ssh key for web-server instance and save to local
######################################################################
resource "tls_private_key" "web-server" {
  algorithm = "RSA"
  rsa_bits  = 4096
}
resource "aws_key_pair" "generated_key" {
  key_name   = "web-server-ssh-key"
  public_key = tls_private_key.web-server.public_key_openssh

  provisioner "local-exec" { # Create "web_server_key.pem" to your computer
    command = "echo '${tls_private_key.web-server.private_key_pem}' > ./web_server_key.pem"
  }
}
output "private_key" {
  value     = tls_private_key.web-server.private_key_pem
  sensitive = true
}

######################################################################
# Provision ansible
######################################################################
resource "null_resource" "ansible" {
    provisioner "local-exec" {
        command = "ansible-playbook ./ansible/web_server.yaml -i ./ansible/inventory"
    }
}
